Add Crates Configuration for CityBuild System Plugin
The commit adds a new file for the Crates configuration of the CityBuild System Plugin as part of the CityBuild API documentation. Additionally, a slight amendment was made to the 'Position' of active contributors.

--- a/docs/citybuild-api/contributing/active_contributors.mdx
+++ b/docs/citybuild-api/contributing/active_contributors.mdx
@@ -34,7 +34,7 @@ Die **CityBuild API** wird von einer engagierten Gruppe von Entwicklern und Mitw
 - **Wohnort**: Deutschland
 - **Sprachen**: Deutsch (Muttersprache), Bayerisch (fließend) ;D, Englisch (fließend)
 - **E-Mail**: [felixprogram@splatgames.de](mailto:felixprogram@splatgames.de)
-- **Position**: 2. Inhaber und Entwickler, verantwortlich für die Entwicklung und Implementierung neuer Funktionen.
+- **Position**: Mitinhaber und Entwickler, verantwortlich für die Entwicklung und Implementierung neuer Funktionen.
 
 #### Beiträge
 
