--- a/docs/citybuild-api/contributing/active_contributors.mdx
+++ b/docs/citybuild-api/contributing/active_contributors.mdx
@@ -42,5 +42,5 @@ Die **CityBuild API** wird von einer engagierten Gruppe von Entwicklern und Mitw
 
 ## Weitere Mitwirkende
 
-- **[RealArgus](https://twitter.com/RealArgus7)**: Hilfe bei der Dokumentation und Übersetzung von Texten.
+- **[RealArgus](https://twitter.com/TheRealArgus7)**: Hilfe bei der Dokumentation und Übersetzung von Texten.
 - **[Breleger](https://www.youtube.com/@BrelegerMusic):** Hilfe bei der Dokumentation und Komponist von Musik für das Projekt und den Server.
