--- a/docs/citybuild-api/dev/api/roadmap.mdx
+++ b/docs/citybuild-api/dev/api/roadmap.mdx
@@ -2,3 +2,13 @@
 slug: /dev/api/roadmap
 description: The roadmap for the CityBuild API and the CityBuild Core.
 ---
+
+# Roadmap
+
+Diese Seite zeigt den aktuellen Entwicklungsstand und die geplanten Funktionen für die CityBuild API und die CityBuild Core.
+
+## CityBuild API
+
+### Geplante Funktionen
+
+- [x] API-Endpunkt für das Abfragen von Spielern
